--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "module": "commonjs",
     "target": "es5",
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "strict": true,
+    "noUnusedLocals": true,
   }
 }
